@@ -18,6 +18,8 @@ export const DOWNLOAD_CSV = '/download/backup';
 export const USERS_TABS = ['Create User'];
 export const DATA_TABS = ['Export CSV', "Visual"];
 
+export const CHART_TYPES = [{label: 'Temperature', value: 1}, {label: 'Humidity', value: 2}];
+
 export const GRAPH_ELEMENTS = ['Bedroom', 'Living Room', 'Server Room', 'Office', 'Outside', 'Heat'];
 export const GRAPH_PERIODS = ['1 Day', '2 Day', '3 Day', '1 Week', '2 Week', '1 Month', '3 Month'];
 
